[package]
name = "ddgpu"
version = "0.1.0"
edition = "2021"

[dependencies]

#[cfg(target_os = "windows")]
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System", 
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32", 
    "Win32_UI", 
    "Win32_UI_Shell", 
    "Win32_UI_WindowsAndMessaging"
]